Closed Bug 1646793 Opened 5 years ago Closed 5 years ago

Speculatively compiled scripts are never properly removed from the JS helper finished parse task list

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox77 --- unaffected
firefox78 --- unaffected
firefox79 --- fixed

People

(Reporter: denispal, Assigned: denispal)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

bug 1634641 uncovered a regression introduced by bug 1606652 where speculatively compiled scripts that are not executed can linger in the parseFinishedList_ in the GlobalHelperThreadState and are never freed.

Cancel all preload requests when the ScriptLoader is destroyed.

Set release status flags based on info from the regressing bug 1606652

Pushed by dpalmeiro@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/117899cfe531 Cancel all preload requests when the ScriptLoader is destroyed r=smaug
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: