Bug 1646793 - Cancel all preload requests when the ScriptLoader is destroyed r=smaug

Cancel all preload requests when the ScriptLoader is destroyed.

Differential Revision: https://phabricator.services.mozilla.com/D80218